# homeMaker

./: .coderabbit.yaml  .env.example  .env.homemaker.example  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  CLEANUP_REPORT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  HANDOFF.md  HEADSDOWN_SESSION_SUMMARY.md  README.md  SECURITY.md  automaker.service  docker-compose.dev-server.yml  docker-compose.dev.yml  docker-compose.docs.yml  docker-compose.homemaker.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  node_modules  package-lock.json  package.json  proto.config.example.yaml  spec.md  start-automaker.sh  status.md
.automaker/: actionable-items.json.corrupted.1773621596916  ava-config.json  lead-engineer-sessions.json  spec.md
.automaker/context/: CLAUDE.md  coding-rules.md  failure-lessons-unknown.md
.automaker/memory/: api.md  architecture.md  auth.md  content-pipeline-validation.md  cost-optimization.md  data.md  database.md  documentation.md  glyphkit-release.md  gotcha.md  gotchas.md  ui.md  (+12 more)
.beads/: issues.jsonl
.claude/: settings.json
.devcontainer/: devcontainer.json
apps/ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/ui/src-tauri/capabilities/: default.json
apps/ui/src-tauri/icons/: README.md
apps/ui/src-tauri/src/: lib.rs
docs/: README.md  ava-headless-quickstart.md  claude-plugin.md  discord.md  index.md  self-learning-self-healing-proposal.md
scripts/: README.md  batch-create-features.sh  example-features.json  setup-monitoring.sh  setup-protolab.sh  setup-staging.sh  smoke-test.sh
site/: index.html
(+903 files in other folders)
